[project]
name = "nepali-calendar-api"
version = "0.1.0"
description = "A Nepali calendar dataset/library containing Nepali dates, tithi, festivals, public holidays, and auspicious dates for marriage and bratabandha ceremonies."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "colorama>=0.4.6",
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
]
authors = [
    { name = "Sankalp Tharu", email = 'sankalptharu50028@gmail.com' },
]
